[package]
name = "passifier"
version = "0.1.0"
authors = ["Marcelo Lima <marcelowind@gmail.com>"]
edition = "2018"

[workspace]

[dependencies]
anyhow = "1"
clap = "3.0.0-beta.2"
crypter = { path = "lib/crypter", features = [ "serialize" ] }
rpassword = "5"
rucline = "0"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
store = { path = "lib/store" }
nested_map = { path = "lib/nested_map", features = [ "flatten" ] }
