[package]
name = "crypter"
version = "0.1.0"
authors = ["Marcelo Lima <marcelowind@gmail.com>"]
edition = "2018"

[dependencies]
aes-gcm = "0.6"
miniz_oxide = { version = "0.4", optional = true }
rand = "0.8"
rmp-serde = { version = "0.15", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
sha2 = "0.9"
thiserror = "1"

[features]
default = []
compress = [ "serialize", "miniz_oxide" ]
serialize = [ "serde", "rmp-serde" ]
